- Added back some missing SVComp tests - Added combined test for Refinement on litmus tests. Increased Saturation bound to 3 for this (may still be insufficient) - Some general cleanup + comments - Small fix in kSaturation code